--- a/lang/ar.json
+++ b/lang/ar.json
@@ -25,28 +25,33 @@
       "title": "عنوان هنا",
       "description": "في محلنا، نقدم لك تجربة فريدة من نوعها مع مجموعة متنوعة من أطيب أنواع الكيك والحلويات المصنوعة بأيدي خبيرة باستخدام مكونات عالية الجودة. نحن نحرص على تقديم كيكات طازجة وذات مذاق لا يُنسى لتناسب جميع المناسبات الخاصة والعائلية. سواء كنت تبحث عن كيكات لاحتفال مميز أو لمجرد الاستمتاع بطبق من الحلا، فنحن هنا لنلبي احتياجاتك بأفضل طريقة ممكنة. نحن نؤمن بأن كل لحظة تستحق أن تكون أحلى مع لمسة من الحلوى الشهية."
     },
-    "الفروع": "Branches",
-    "فرع 1": "Branch 1",
-    "اسم الفرع": "Branch Name",
-    "مواعيد العمل": "Working Hours",
-    "من 9 صباحاً وحتى الـ 5 مساءً": "From 9 AM to 5 PM",
-    "تواصل معنا": "Contact Us",
-    "الاسم": "Name",
-    "البريد الإلكتروني": "Email",
-    "رقم الهاتف": "Phone",
-    "اكتب رسالتك هنا ...": "Write your message here ...",
-    "تأكيد": "Confirm",
-    "إلغاء": "Cancel",
-    "من نحن": "About Us",
-    "الصفحة الرئيسية": "Home",
-    "تسوق الآن": "Shop Now",
-    "السابق": "Previous",
-    "التالي": "Next",
-    "لا تضيع مناسبة بنوصلك وين ما كنت": "Don't miss an occasion, we deliver to you wherever you are",
-    "الاقسام": "Categories",
-    "داخل الاردن": "Inside Jordan",
-    "خارج الاردن": "Outside Jordan",
-    "تحميل التطبيق": "Download the App"
     
+    "branches": "الفروع",
+    "branch_1": "الفرع 1",
+    "branch_name": "اسم الفرع",
+    "working_hours": "مواعيد العمل",
+    "from_9_to_5": "من 9 صباحاً وحتى الـ 5 مساءً",
+    "contact_us": "تواصل معنا",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "write_message": "اكتب رسالتك هنا ...",
+    "confirm": "تأكيد",
+    "cancel": "إلغاء",
+    "about_us": "من نحن",
+    "home": "الصفحة الرئيسية",
+    "shop_now": "تسوق الآن",
+    "previous": "السابق",
+    "next": "التالي",
+    "dont_miss_occasion": "لا تضيع مناسبة بنوصلك وين ما كنت",
+    "categories": "الاقسام",
+    "inside_jordan": "داخل الاردن",
+    "outside_jordan": "خارج الاردن",
+    "download_app": "تحميل التطبيق",
+    "videos": "فيديوهات",
+    "private_videos": "فيديوهات خاصة",
+    "layered_sweets": "حلويات طبقات",
+    "chocolate_cake": "كيك شوكولاتة",
+    "creamy_dessert": "حلى كريمي"
   }
   
