--- a/lang/ar.json
+++ b/lang/ar.json
@@ -15,7 +15,8 @@
       "email": "البريد الإلكتروني",
       "phone": "رقم الهاتف",
       "write_message": "اكتب رسالتك هنا ...",
-      "confirm": "تأكيد"
+      "confirm": "تأكيد",
+      "cancel": "إلغاء"
     },
     "about_us_section": {
       "title": "من نحن",
@@ -25,7 +26,6 @@
       "title": "عنوان هنا",
       "description": "في محلنا، نقدم لك تجربة فريدة من نوعها مع مجموعة متنوعة من أطيب أنواع الكيك والحلويات المصنوعة بأيدي خبيرة باستخدام مكونات عالية الجودة. نحن نحرص على تقديم كيكات طازجة وذات مذاق لا يُنسى لتناسب جميع المناسبات الخاصة والعائلية. سواء كنت تبحث عن كيكات لاحتفال مميز أو لمجرد الاستمتاع بطبق من الحلا، فنحن هنا لنلبي احتياجاتك بأفضل طريقة ممكنة. نحن نؤمن بأن كل لحظة تستحق أن تكون أحلى مع لمسة من الحلوى الشهية."
     },
-    
     "branches": "الفروع",
     "branch_1": "الفرع 1",
     "branch_name": "اسم الفرع",
@@ -52,6 +52,40 @@
     "private_videos": "فيديوهات خاصة",
     "layered_sweets": "حلويات طبقات",
     "chocolate_cake": "كيك شوكولاتة",
-    "creamy_dessert": "حلى كريمي"
+    "creamy_dessert": "حلى كريمي",
+    "cart": {
+      "item_name": "اسم الصنف",
+      "price": "السعر",
+      "quantity": "الكمية",
+      "total": "المجموع",
+      "remove": "إزالة"
+    },
+    "checkout": {
+      "title": "الدفع",
+      "order_summary": "ملخص الطلب",
+      "shipping_details": "تفاصيل الشحن",
+      "billing_details": "تفاصيل الفاتورة",
+      "place_order": "إتمام الطلب",
+      "payment_method": "طريقة الدفع"
+    },
+    "footer": {
+      "privacy_policy": "سياسة الخصوصية",
+      "terms_of_service": "شروط الخدمة",
+      "contact_info": "معلومات الاتصال",
+      "follow_us": "تابعنا",
+      "newsletter": "النشرة الإخبارية"
+    },
+
+    "cart_total": "اجمالي السلة",
+    "subtotal": "المجموع الفرعي",
+    "login": "تسجيل الدخول",
+    
+    "shipping_info": {
+        "title": "معلومات الشحن",
+        "name": "الاسم",
+        "phone": "رقم الهاتف",
+        "zone": "المنطقة",
+        "shipping_info_text": "معلومات الشحن"
+      }
   }
   
