--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,6 +1,7 @@
 {
   "labels": {
     "shop_now": "تسوق الآن",
+    "Shop Now": "تسوق الآن",
     "previous": "السابق",
     "next": "التالي",
     "dont_miss_occasion": "لا تضيع مناسبة بنوصلك وين ما كنت",
@@ -70,82 +71,77 @@
   "shop now": "تسوق الآن",
   "dont miss an occasion": "لا تضيع مناسبة بنوصلك وين ما كنت",
   "download_the_app": "تحميل التطبيق",
-  "About Us":"ماذا عنا",
-  "Categories":"الاقسام",
-  "Inside Jordan":"داخل الاردن",
-  "Outside Jordan":"خارج الاردن",
-  "Download App":"تحميل التطبيق",
-  "Contact":"للتواصل",
-  "Email":"البريد الالكتروني",
-  "Phone":"الهاتف",
-  "Home":"الرئيسية",
-  "Shop":"المتجر",
-  "Branchs":"الفروع",
-  "Catalog":"كتالوج",
-  "Videos":"فيديوهات خاصة",
-  "Welcome":"مرحبا",
-  "My Profile":"صفحتي الشخصيه",
-    "confirm": "تأكيد",
-    "cancel": "إلغاء",
-    "about_us": "من نحن",
-    "home": "الصفحة الرئيسية",
-    "shop_now": "تسوق الآن",
-    "previous": "السابق",
-    "next": "التالي",
-    "dont_miss_occasion": "لا تضيع مناسبة بنوصلك وين ما كنت",
-    "categories": "الاقسام",
-    "inside_jordan": "داخل الاردن",
-    "outside_jordan": "خارج الاردن",
-    "download_app": "تحميل التطبيق",
-    "videos": "فيديوهات",
-    "private_videos": "فيديوهات خاصة",
-    "layered_sweets": "حلويات طبقات",
-    "chocolate_cake": "كيك شوكولاتة",
-    "creamy_dessert": "حلى كريمي",
-    "cart": {
-      "item_name": "اسم الصنف",
-      "price": "السعر",
-      "quantity": "الكمية",
-      "total": "المجموع",
-      "remove": "إزالة"
-    },
-    "checkout": {
-      "title": "الدفع",
-      "order_summary": "ملخص الطلب",
-      "shipping_details": "تفاصيل الشحن",
-      "billing_details": "تفاصيل الفاتورة",
-      "place_order": "إتمام الطلب",
-      "payment_method": "طريقة الدفع"
-    },
-    "footer": {
-      "privacy_policy": "سياسة الخصوصية",
-      "terms_of_service": "شروط الخدمة",
-      "contact_info": "معلومات الاتصال",
-      "follow_us": "تابعنا",
-      "newsletter": "النشرة الإخبارية"
-    },
-
-    "cart_total": "اجمالي السلة",
-    "subtotal": "المجموع الفرعي",
-    "login": "تسجيل الدخول",
-
-    "shipping_info": {
-        "title": "معلومات الشحن",
-        "name": "الاسم",
-        "phone": "رقم الهاتف",
-        "zone": "المنطقة",
-        "shipping_info_text": "معلومات الشحن"
-      },
-      
-      
-  
+  "About Us": "ماذا عنا",
+  "Categories": "الاقسام",
+  "Inside Jordan": "داخل الاردن",
+  "Outside Jordan": "خارج الاردن",
+  "Download App": "تحميل التطبيق",
+  "Contact": "للتواصل",
+  "Email": "البريد الالكتروني",
+  "Phone": "الهاتف",
+  "Home": "الرئيسية",
+  "Shop": "المتجر",
+  "Branchs": "الفروع",
+  "Catalog": "كتالوج",
+  "Private Videos":"الفيديوهات الخاصه",
+  "Shop By Category":"تصفح حسب التصنيف",
+  "Videos": "فيديوهات خاصة",
+  "Welcome": "مرحبا",
+  "My Profile": "صفحتي الشخصيه",
+  "Contact Us":"تواصل معنا",
+  "confirm": "تأكيد",
+  "cancel": "إلغاء",
+  "about_us": "من نحن",
+  "home": "الصفحة الرئيسية",
+  "shop_now": "تسوق الآن",
+  "previous": "السابق",
+  "next": "التالي",
+  "dont_miss_occasion": "لا تضيع مناسبة بنوصلك وين ما كنت",
+  "categories": "الاقسام",
+  "inside_jordan": "داخل الاردن",
+  "outside_jordan": "خارج الاردن",
+  "download_app": "تحميل التطبيق",
+  "videos": "فيديوهات",
+  "private_videos": "فيديوهات خاصة",
+  "layered_sweets": "حلويات طبقات",
+  "chocolate_cake": "كيك شوكولاتة",
+  "creamy_dessert": "حلى كريمي",
+  "Search for your Products ..":"ابحث عن منتجاتك...",
+  "cart": {
+    "item_name": "اسم الصنف",
+    "price": "السعر",
+    "quantity": "الكمية",
+    "total": "المجموع",
+    "remove": "إزالة"
+  },
+  "checkout": {
+    "title": "الدفع",
+    "order_summary": "ملخص الطلب",
+    "shipping_details": "تفاصيل الشحن",
+    "billing_details": "تفاصيل الفاتورة",
+    "place_order": "إتمام الطلب",
+    "payment_method": "طريقة الدفع"
+  },
+  "footer": {
+    "privacy_policy": "سياسة الخصوصية",
+    "terms_of_service": "شروط الخدمة",
+    "contact_info": "معلومات الاتصال",
+    "follow_us": "تابعنا",
+    "newsletter": "النشرة الإخبارية"
+  },
+  "cart_total": "اجمالي السلة",
+  "subtotal": "المجموع الفرعي",
+  "login": "تسجيل الدخول",
+  "shipping_info": {
+    "title": "معلومات الشحن",
+    "name": "الاسم",
+    "phone": "رقم الهاتف",
+    "zone": "المنطقة",
+    "shipping_info_text": "معلومات الشحن"
+  },
   "forgot_password": "نسيت كلمة المرور؟",
- 
   "register": "تسجيل",
- 
-  
   "create_account": "إنشاء حساب",
-  
   "password": "كلمة المرور",
   "select_country": "اختر الدولة",
   "egypt": "مصر",
@@ -158,6 +154,30 @@
   "us_dollar": "الدولار الأمريكي",
   "saudi_riyal": "الريال السعودي",
   "uae_dirham": "الدرهم الإماراتي",
-  "jordanian_dinar": "الدينار الأردني"
-  }
-  
+  "jordanian_dinar": "الدينار الأردني",
+  "In our shop, we offer you a unique experience with a variety of the finest types of cakes and sweets made by expert hands using high-quality ingredients. We ensure to provide fresh cakes with unforgettable taste to suit all special and family occasions. Whether you are looking for cakes for a special celebration or just enjoying a dish of sweets, we are here to meet your needs in the best possible way. We believe that every moment deserves to be sweeter with a touch of delicious dessert.":"في متجرنا، نقدم لك تجربة فريدة من نوعها مع مجموعة متنوعة من أرقى أنواع الكيك والحلويات المصنوعة بأيدي خبراء وباستخدام مكونات عالية الجودة. نحرص على توفير كيك طازج بمذاق لا يُنسى ليناسب جميع المناسبات الخاصة والعائلية. سواء كنت تبحث عن كيك للاحتفال بمناسبة خاصة أو ترغب فقط في الاستمتاع بطبق من الحلويات، نحن هنا لتلبية احتياجاتك بأفضل طريقة ممكنة. نحن نؤمن بأن كل لحظة تستحق أن تكون أكثر حلاوة بلمسة من الحلوى اللذيذة. 🍰✨",
+  "Branches":"الفروع",
+  "Send to us your custom image":"أرسل لنا صورة التصميم الذي تريده",
+  "notes":"ملاحضات",
+  "Add to Cart":"اضف للسله",
+  "Address":"العنـــوان",
+  "Payment Method":"طريقه الدفع",
+  "Invoice":"الفاتورة",
+  "Pick Address":"اختر عنوان",
+  "next":"التالي",
+  "Add Address":"اضافة عنوان",
+  "Cash on Delevery":"الدفع عند الاستلام",
+  "Visa":"الدفع اون لاين",
+  "Total":"المجموع",
+  "sub total":"المجموع الفرعي",
+  "product":"المنتج",
+  "discount":"الخصومات",
+  "points":"النقاط",
+  "I have read and agree to the Site Terms and Privacy Policy.":"لقد قرات ووافقت على شروط الموقع وسياسة الخصوصية",
+  "checkout":"الدفع",
+  "billing address":"معلومات",
+  "payment method":"طريقه الدفع",
+  "":"",
+  "":"",
+  "":""
+}
